Added endpoints for role and cabinet roles
