# src/routers/cabinet-role.router.ts
@@ -1,0 +1,9 @@
+import { Router } from 'express';
+import { findAllCabinetRoles, updateCabinetRoles } from '../controllers/cabinet-role.controller';
+
+const router = Router();
+
+router.get('/', findAllCabinetRoles);
+router.post('/update', updateCabinetRoles);
+
+export default router;
