# src/types/role.type.ts
@@ -1,0 +1,7 @@
+/**
+ * An interface that represents a role.
+ */
+export interface Role {
+    name: string;
+    abbreviation: string | undefined;
+}
